@@ -24,6 +24,8 @@ Version 15.UNKNOWN (master)
 * New menu item Recent Files/Clear List.
 * New shortcut Ctrl+Shift+H, which behaves like Find Move (Ctrl+H) but
   iterates backwards through the list of legal moves.
+* The game analysis now always contains a value for the position after
+  the last move, which is useful for analyzing unfinished games.
 * The Android version now shows an error before open/save if permission
   to access storage have not been granted.
 * Android: color dot of the color to play is no longer surrounded by a border
@@ -31,8 +33,7 @@ Version 15.UNKNOWN (master)
   at the top.
 * The translation source strings for menu items and actions no longer use
   an ampersand to mark a mnemonic but a separate translation string for
-  the mnemonic. Ampersands caused problems with searches in Weblate
-  (https://github.com/WeblateOrg/weblate/issues/1861)
+  the mnemonic.
 
 Bug fixes:
 
